syntax = "proto3";

package project.v1;

option go_package = "example/projectv1";

enum Status {
  STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}

